--- a/src/index.html
+++ b/src/index.html
@@ -11,44 +11,42 @@
   </head>
   <body>
   <div class='container'>
-    <img src = "https://static01.nyt.com/images/2017/02/09/blogs/09-lens-showkat-slide-P2IC/09-lens-showkat-slide-P2IC-superJumbo.jpg">
-    <h1 class="headline">A Child of Kashmir’s War
-Grows Up to Document It
+    <img src="https://upload.wikimedia.org/wikipedia/commons/1/1f/Central_american_migrants_mexico.jpg">
+	<div class='photocredit'>
+	Central American Migrants Going North in De Los Doctores, Ixtepec, Oaxaca, Mexico.(Peter Haden, Flickr)
+	</div>
+    <h1 class="headline">Getting Asylum in New Mexico Is Harder Than Anywhere Else in the Country
     </h1>
-    <p class="body">
-    Showkat Nanda grew up hard in Indian-run Kashmir, a child of war, 
-    iron-fisted rule and relentless tragedy. 
+    <p class="sub">
+    A lack of access to legal services means asylum-seekers detained in New Mexico have significantly lower chances of being granted asylum in the U.S.
     </p>
-    <p class="body">
-    He was seven years old in 1989 when rebels 
-    — some in their teens, some barely out of them — 
-    mounted an insurgency against the standing army that ran their lives. 
-    Soon Pakistan, which had been locked in a battle with India over Kashmir ever since 
-    the two became separate, sovereign nations in 1947, joined the insurgents. Mayhem 				  ensued. 
-    </p>
-    <p class="body">
-    Within a year, Mr. Nanda lost a brother and a cousin. His 17-year-old brother died trying 
-    to cross the otherworldly mountain passes across the Line of Control, the de facto border to 
-    Pakistan-controlled Kashmir, while he, like thousands of young men, was seeking to train to 
-    fight the Indian forces. Three months earlier, his 16-year-old cousin had been throwing stones 
-    at government forces when they shot him dead.
-    </p>
-    <img src="https://static01.nyt.com/images/2017/02/08/blogs/09-lens-showkat-embed/09-lens-showkat-embed-blog480.jpg">
-     <p class="body">
-   “Everything became so uncertain,” recalled Mr. Nanda, now 34. 
-   “I stopped dreaming about my future. Survival became the topmost priority, even for children like me.”
-    </p>
-     <p class="body">
-   War made him a photographer. Mr. Nanda had discovered a knack for the camera as a boy when he borrowed a film SLR and taught himself how to use it. Had he grown up in another time and place — one where who died, who disappeared and who lost a limb or an eye was not the daily reality — photography might have become a hobby. He had dreamed of becoming a surgeon, after all, a likely profession for a good student from a middle-class, educated family. But he had seen too much. Mr. Nanda studied documentary photography (he has master’s degrees from the University of Kashmir and, thanks to a Fulbright Fellowship, from the University of Missouri) and made it his life’s goal to tell the untold stories of his homeland.
-    </p>
-     <p class="body">
-  “The Endless Wait” is a project that Mr. Nanda could say he has been gathering string on for most of his life. It focuses on the effect of enforced disappearances as men suspected of rebel activity or who knows what were snatched from their beds, the markets and the streets during the conflict’s last 26 years, never to be seen again.
-    </p>
-    <p class="body">
- “Enforced disappearance” is a tactic used in conflicts all over the world, but the vanishing of thousands of men in the villages Mr. Nanda has traveled through have received little attention outside Kashmir. Human rights groups place the numbers at 6,000 to 8,000. International and local human rights groups have found 2,700 graves in North Kashmir alone, some with more than one body. Most families have never found their loved ones, so even with the occasional news of more graves, they continue to hold out hope.
-    </p>
-    <img src="https://static01.nyt.com/images/2017/02/08/blogs/09-lens-showkat-embed2/09-lens-showkat-embed2-blog480.jpg">
+    <div class="author">
+    Alena Maschke
     </div>
+    <div class="body">
+    New Mexico’s removal rate from detention facilities is the highest in the country. 88% of individuals detained by Immigration and Customs Enforcement in New Mexico are eventually removed, meaning they are deported back to their home country and barred from re-entering for several years. The American Southwest is where most of those seeking asylum after crossing the Southern border are picked up by border patrol and kept in local detention centers, in many cases until their case has been decided upon.
+    </div>
+    <p class="body">
+Several studies have shown the immense impact that access to legal representation has on the outcome of a person’s asylum case. A 2011 study by the Katzmann Immigrant Representation Study Group and the Vera Institute of Justice in New York found that those detained and without legal representation had a three percent chance of winning their case, compared to eighteen percent of those detained but under the representation of a lawyer. The Southwestern States have a far higher rate of removals than any other states. They also have less lawyers per square mile.
+    </p>
+   <iframe width="100%" height="520" frameborder="0" src="https://am4597.carto.com/builder/1550ebdc-f9ea-11e6-91d8-0e3ff518bd15/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+   <p class="body">
+   New Mexico is an especially extreme case in both regards. It has the highest removal rate in the country, and also one of the lowest density of lawyers. This means that those crossing the Southern border in this state, rather than Arizona, Texas or California, have less lawyers available to them. It is challenging enough for detainees to retain an attorney to represent them, the lack of lawyers in the state makes this incredibly challenging.
+    </p>
+     <p class="body">
+  Texas also has a comparably low density of lawyers, and a fairly high removal rate. Here, however, pro bono lawyers have prominently stepped in. The detention center in Dilley, Texas, has seen an unprecedented amount of “emergency lawyering”, organized by the CARA Pro Bono project. Jason Parkin, director of the Immigrant Law Clinic at Columbia University sends a group of law school students to Dilley every year. “The presence of lawyers there to do that has a great impact on the outcome,” says Parkin. Dilley is a family detention center, meaning it is populated by mothers and children who arrived together. 
+    </p>
+     <p class="body">
+In New Mexico, pro bono immigration lawyers are few and far between. Even though there is no official data on the number of immigration lawyers per state, or a comprehensive databank of pro bono projects such as CARA, the American Bar Association only lists seven such programs and organizations statewide. For asylum seekers who are already in detention, reaching out to such organizations is incredibly challenging. Those who do not claim “credible fear” of prosecution in their home country right away are not granted legal counsel at all. Recent border crossers who do not express the intent to claim asylum are subject to expedited removal. “Expedited removal strips away all those protections: there is no judge, there is no appeal, there is no lawyer,” says Parkin. 
+    </p>
+    <p class="body">
+But even those who do, and are placed in detention rather than deported on the spot, are in desperate need of legal counsel to assure that they are adequately prepared to make their case. “In the beginning, there were no lawyers. And women who had just crossed the border walked into these interviews had literally no idea what they were walking into,” Parkins says, describing the situation in Dilley before the arrival of pro bono lawyers. “Many, many of the women who are coming are fleeing really terrible things,” he says. In New Mexico, they have much less of a chance at escaping for good.
+    </p>
+    <img src="//c1.staticflickr.com/5/4097/4860179958_b6fd12e39b_b.jpg" class="zoom-large">
+    <div class='photocredit'>
+	Fence in Albuquerque, New Mexico. (Brad Bridgewater, Flickr)
+	</div>
+  </div>
   <script src="assets/js/app.js"></script>
   </body>
 </html>
